<resources>
    <string name="app_name">DTag</string>
    <string name="error_format_invalid">Format is invalid</string>
    <string name="error_too_short">Too short</string>
    <string name="new_user_signup">New User Signup</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="email_hint">john@gmail.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account. Login Here</string>
    <string name="account_login">Account Login</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account_register_here">Don\'t have an account. Register Here</string>
    <string name="notes_not_found">No notes found</string>
    <string name="edit_note_button_text">Edit</string>
    <string name="edit_note_hint">edit note</string>
    <string name="delete_note_button_text">Delete</string>
    <string name="cancel_delete_button_text">Cancel</string>
    <string name="confirm_delete_button_text">Confirm Delete</string>
    <string name="error_deleting_note">Error deleting note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="desc">description</string>
    <string name="priority">Priority:</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="skip"><![CDATA[skip >>]]></string>
</resources>
