<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.zainco.dtag.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="@dimen/width_100dp"
            android:layout_height="@dimen/height_100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_48dp"
            android:background="@drawable/user_profile_image_background"
            android:elevation="@dimen/elevation_4dp"
            android:src="@drawable/ic_boy"
            app:layout_constraintBottom_toTopOf="@id/constraint_credentials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_credentials"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_56dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:background="@android:color/white"
            android:paddingStart="@dimen/padding_32dp"
            android:paddingTop="@dimen/padding_40dp"
            android:paddingEnd="@dimen/padding_32dp"
            android:paddingBottom="@dimen/padding_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title">

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/text_email"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_10dp"
                android:hint="@string/email_hint"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:singleLine="true"
                android:text="@={viewmodel.auth.fields.email}"
                app:error="@{viewmodel.auth.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_email"
                app:onFocus="@{viewmodel.getEmailOnFocusChangeListener()}" />


            <TextView
                android:id="@+id/lbl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/edit_text_password"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={viewmodel.auth.fields.password}"
                app:error="@{viewmodel.auth.passwordError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_password"
                app:onFocus="@{viewmodel.getPasswordOnFocusChangeListener()}" />


            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_22dp"
                android:background="@color/colorPrimary"
                android:enabled="@{viewmodel.auth.valid}"
                android:onClick="@{() -> viewmodel.onButtonClick()}"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <TextView
                android:id="@+id/text_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_24dp"

                android:text="@string/dont_have_an_account_register_here"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>